# slimthicc_yt

./: .cache  .gitattributes  .gitignore  README.md  RELEASE_NOTES.md  TROUBLESHOOTING_RPI.md  build_rpi.sh  build_universal.sh  docker-compose.yml  netlify.toml  platform_utils.py  playlist_run.py  playlist_run_qt.py  pyproject.toml  render.yaml  requirements.txt  requirements_rpi.txt  rpi_enhanced_launcher.sh  rpi_optimize_system.sh  spotify_handler.py  test_download.py
server/: 0MUTRlQUXW9hZQdSsyNNSC_tracks.json  Dockerfile  Top_Songs_-_USA_(2)_tracks.json  deploy.sh  download_spotify_direct.py  entrypoint.sh  render.yaml  requirements.txt  run.py  setup.sh  spotify_track_extractor.py  test_spotify.py  test_spotify_scraper.py
server/simple_downloads/: download_results.json
server/src/: main.py
server/src/api/v1/: router.py
server/src/api/v1/downloads/: __init__.py  router.py
server/src/config/: database.py  settings.py
server/src/models/: download.py
server/src/services/: download_manager.py  download_task_manager.py  ffmpeg_manager.py  websocket_manager.py
server/src/services/download_strategies/: __init__.py  base.py  base_strategy.py  invidious_strategy.py  pytube_strategy.py  spotify_strategy.py  strategy_selector.py  ytdlp_strategy.py
server/temp/spotify/: 6s89SMzt69PnuvK9wCuKwl_tracks.json
